# rust-web

./: .gitignore  Cargo.toml  README.md  Rocket.toml  package.json  remix.config.js  tsconfig.json
proto/: hello.proto
src/: configuration.ts  main.rs
src/api/: home.rs  mod.rs  user.rs
src/config/: config.default.ts
src/model/: mod.rs  user.rs
