[package]
edition = "2021"
name = "falcon"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
mongodb = "2.3.0"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = {version = "0.8", features = ["serde", "v4"]}
